# vimango_mcp

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
src/vimango_mcp/: __init__.py  db.py  server.py
tests/: __init__.py
