[project]
name = "vimango-mcp"
version = "0.1.0"
description = "MCP server for vimango note-taking application"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Steve Zatz", email = "slzatz@gmail.com" }
]
license = { text = "MIT" }
dependencies = [
    "mcp>=1.0.0",
]

[project.scripts]
vimango-mcp = "vimango_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
